feat: Move Media apps to Main-DB cluster

--- a/kubernetes/apps/media/radarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/radarr/app/externalsecret.yaml
@@ -9,17 +9,16 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: radarr
+    name: radarr-secret
     creationPolicy: Owner
     template:
       engineVersion: v2
       data:
         RADARR__AUTH__APIKEY: "{{ .RadarrAPIKey }}"
-        RADARR__POSTGRES__HOST: radarr-db-rw
+        RADARR__POSTGRES__HOST: main-db-rw.databases
         RADARR__POSTGRES__PORT: "5432"
         RADARR__POSTGRES__USER: "{{ .appUser }}"
         RADARR__POSTGRES__PASSWORD: "{{ .appPassword }}"
-        RADARR__POSTGRES__MAINDB: "{{ .appDB }}"
   dataFrom:
     - extract:
         key: arr-apps
