--- a/kubernetes/apps/media/prowlarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/prowlarr/app/externalsecret.yaml
@@ -9,17 +9,16 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: prowlarr
+    name: prowlarr-secret
     creationPolicy: Owner
     template:
       engineVersion: v2
       data:
         PROWLARR__AUTH__APIKEY: "{{ .ProwlarrAPIKey }}"
-        PROWLARR__POSTGRES__HOST: prowlarr-db-rw
+        PROWLARR__POSTGRES__HOST: main-db-rw.databases
         PROWLARR__POSTGRES__PORT: "5432"
         PROWLARR__POSTGRES__USER: "{{ .appUser }}"
         PROWLARR__POSTGRES__PASSWORD: "{{ .appPassword }}"
-        PROWLARR__POSTGRES__MAINDB: "{{ .appDB }}"
   dataFrom:
     - extract:
         key: arr-apps
