--- a/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app prowlarr
+  name: prowlarr
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
+    name: prowlarr
   install:
     remediation:
       retries: -1
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      *app :
+      prowlarr:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -31,14 +31,15 @@ spec:
               PROWLARR__AUTHENTICATION__METHOD: External
               PROWLARR__AUTHENTICATION__REQUIRED: DisabledForLocalAddresses
               PROWLARR__INSTANCENAME: Prowlarr
-              PROWLARR__PORT: &port 9696
+              PROWLARR__PORT: &port 80
+              PROWLARR__POSTGRES__MAINDB: "{{ .Release.Name }}"
               PROWLARR__LOG__LEVEL: info
               PROWLARR__LOG__DBENABLED: 'false'
               PROWLARR__THEME: dark
               PROWLARR__UPDATE__BRANCH: develop
             envFrom:
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness: &probes
                 enabled: true
@@ -60,7 +61,7 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
+              capabilities: {drop: ["ALL"]}
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -68,7 +69,6 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-        seccompProfile: { type: RuntimeDefault }
     service:
       app:
         ports:
@@ -84,8 +84,6 @@ spec:
             sectionName: https
     persistence:
       config:
-        existingClaim: *app
-        globalMounts:
-          - path: /config
+        existingClaim: "{{ .Release.Name }}"
       tmp:
         type: emptyDir
