--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app radarr
+  name: radarr
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
+    name: radarr
   install:
     remediation:
       retries: -1
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      *app :
+      radarr:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -31,20 +31,22 @@ spec:
               RADARR__AUTHENTICATION__METHOD: External
               RADARR__AUTHENTICATION__REQUIRED: DisabledForLocalAddresses
               RADARR__INSTANCENAME: Radarr
-              RADARR__PORT: &port 7878
+              RADARR__PORT: &port 80
+              RADARR__POSTGRES__MAINDB: "{{ .Release.Name }}"
               RADARR__LOG__LEVEL: info
               RADARR__LOG__DBENABLED: 'false'
               RADARR__THEME: dark
               RADARR__UPDATE__BRANCH: develop
             envFrom:
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness: &probes
                 enabled: true
                 custom: true
                 spec:
-                  tcpSocket:
+                  httpGet:
+                    path: /ping
                     port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
@@ -55,18 +57,18 @@ spec:
               requests:
                 cpu: 10m
               limits:
-                memory: 2Gi
+                memory: 4Gi
             securityContext:
-              allowPrivilegeEscalation: true
+              allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              # capabilities: { drop: ["ALL"] }
+              capabilities: {drop: ["ALL"]}
     defaultPodOptions:
       securityContext:
-        runAsNonRoot: false
-        runAsUser: 0
-        runAsGroup: 0
-        # fsGroup: 568
-        # fsGroupChangePolicy: OnRootMismatch
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
     service:
       app:
         ports:
@@ -82,24 +84,26 @@ spec:
             sectionName: https
     persistence:
       config:
-        existingClaim: *app
+        existingClaim: "{{ .Release.Name }}"
+      config-cache:
+        existingClaim: "{{ .Release.Name }}-cache"
         globalMounts:
-          - path: /config
+          - path: /config/MediaCover
       complete:
         type: nfs
         server: truenas.internal
         path: /mnt/BigPool/Media/Downloads
         globalMounts:
           - path: /media/Downloads/Complete
-      media:
-        type: nfs
-        server: truenas.internal
-        path: /mnt/BigPool/Media
-        globalMounts:
-          - path: /PlexMedia
       incomplete:
         type: nfs
         server: truenas.internal
         path: /mnt/Scratch/Downloads
         globalMounts:
           - path: /Downloads/Incomplete
+      media:
+        type: nfs
+        server: truenas.internal
+        path: /mnt/BigPool/Media
+        globalMounts:
+          - path: /PlexMedia
