--- a/kubernetes/apps/media/sonarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/sonarr/app/externalsecret.yaml
@@ -9,7 +9,7 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: sonarr
+    name: sonarr-secret
     creationPolicy: Owner
     template:
       engineVersion: v2
