--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app sonarr
+  name: sonarr
 spec:
   interval: 30m
   chartRef:
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      *app :
+      sonarr:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -27,7 +27,6 @@ spec:
               repository: ghcr.io/home-operations/sonarr
               tag: 4.0.15.2940@sha256:ca6c735014bdfb04ce043bf1323a068ab1d1228eea5bab8305ca0722df7baf78
             env:
-              SONARR__POSTGRES__MAINDB: "{{ .Release.Name }}"
               SONARR__APP__INSTANCENAME: Sonarr
               SONARR__APP__THEME: dark
               SONARR__AUTH__METHOD: External
@@ -35,11 +34,12 @@ spec:
               SONARR__LOG__DBENABLED: "False"
               SONARR__LOG__LEVEL: info
               SONARR__SERVER__PORT: &port 80
+              SONARR__POSTGRES__MAINDB: "{{ .Release.Name }}"
               SONARR__UPDATE__BRANCH: develop
               TZ: America/New_York
             envFrom:
               - secretRef:
-                  name: *app
+                  name: "{{ .Release.Name }}-secret"
             probes:
               liveness: &probes
                 enabled: true
@@ -95,15 +95,15 @@ spec:
         path: /mnt/BigPool/Media/Downloads
         globalMounts:
           - path: /media/Downloads/Complete
-      media:
-        type: nfs
-        server: truenas.internal
-        path: /mnt/BigPool/Media
-        globalMounts:
-          - path: /PlexMedia
       incomplete:
         type: nfs
         server: truenas.internal
         path: /mnt/Scratch/Downloads
         globalMounts:
           - path: /Downloads/Incomplete
+      media:
+        type: nfs
+        server: truenas.internal
+        path: /mnt/BigPool/Media
+        globalMounts:
+          - path: /PlexMedia
