feat: Add Homeassistant DB

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   - ./authentik.yaml
   - ./gitea.yaml
+  - ./homeassistant.yaml
   - ./linkwarden.yaml
   - ./lubelogger.yaml
   - ./mealie.yaml
