--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - ./cluster.yaml
   - ./externalsecret.yaml
   - ./objectstore.yaml
+  - ./pooler.yaml
   - ./scheduled-backup.yaml
   - ./databases/
