chore: Hush some alerts

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -17,6 +17,12 @@ spec:
           - name: alertname
             value: InfoInhibitor
             matchType: =
+          - name: alertname
+            value: Watchdog
+            matchType: =
+          - name: alertname
+            value: SmartDeviceInterfaceSlow
+            matchType: =
       # - receiver: heartbeat
       #   groupInterval: 5m
       #   groupWait: 0s
