feat: Move Default NS apps to Main DB

--- a/kubernetes/apps/default/gitea/app/externalSecret.yaml
+++ b/kubernetes/apps/default/gitea/app/externalSecret.yaml
@@ -46,9 +46,9 @@ spec:
             DOMAIN = {{ .uiUrl }}
 
             [database]
-            NAME = {{ .appDB }}
+            NAME = gitea
             DB_TYPE = postgres
-            HOST = gitea-db-rw:5432
+            HOST = pooler-main-rw.databases:5432
             USER = {{ .appUser }}
             PASSWD = {{ .appPassword }}
             SCHEMA = public
