--- a/kubernetes/apps/default/linkwarden/app/externalsecret.yaml
+++ b/kubernetes/apps/default/linkwarden/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         NEXTAUTH_URL: "{{ .nextAuthURL }}"
         NEXT_PUBLIC_DISABLE_REGISTRATION: "true"
         NEXT_PUBLIC_CREDENTIALS_ENABLED: "false"
-        DATABASE_URL: "postgresql://{{ .appUser }}:{{ .appPassword }}@linkwarden-db-rw:5432/{{ .appDB }}"
+        DATABASE_URL: "postgresql://{{ .appUser }}:{{ .appPassword }}@pooler-main-rw.databases:5432/linkwarden"
         NEXT_PUBLIC_AUTHENTIK_ENABLED: "true"
         AUTHENTIK_CUSTOM_NAME: "SSO"
         AUTHENTIK_ISSUER: "{{ .oidAuthIssuer }}"
