--- a/kubernetes/apps/default/lubelogger/app/externalsecret.yaml
+++ b/kubernetes/apps/default/lubelogger/app/externalsecret.yaml
@@ -31,7 +31,7 @@ spec:
         OpenIDConfig__Scope: "openid email"
         OpenIDConfig__ValidateState: "false"
         OpenIDConfig__DisableRegularLogin: "false"
-        POSTGRES_CONNECTION: Host=lubelogger-db-rw:5432;Username="{{ .appUser }}";Password="{{ .appPassword }}";Database="{{ .appDB }}";
+        POSTGRES_CONNECTION: Host=pooler-main-rw.databases:5432;Username="{{ .appUser }}";Password="{{ .appPassword }}";Database=lubelogger;
   dataFrom:
     - extract:
         key: cloudnative-pg
