--- a/kubernetes/apps/default/mealie/app/externalsecret.yaml
+++ b/kubernetes/apps/default/mealie/app/externalsecret.yaml
@@ -15,14 +15,14 @@ spec:
       data:
         POSTGRES_USER: "{{ .appUser }}"
         POSTGRES_PASSWORD: "{{ .appPassword }}"
-        POSTGRES_DB: "{{ .appDB }}"
+        POSTGRES_DB: mealie
         # Set Backend ENV Variables Here
         ALLOW_SIGNUP: "false"
         TZ: America/New_York
         BASE_URL: "{{ .BaseUrl }}"
         # Database Settings
         DB_ENGINE: postgres
-        POSTGRES_SERVER: mealie-db-rw
+        POSTGRES_SERVER: pooler-main-rw.databases
         POSTGRES_PORT: "5432"
         # AI Settings
         OPENAI_BASE_URL: "http://ollama.ai.svc.cluster.local:11434/v1"
