--- a/kubernetes/apps/default/wikijs/app/externalSecret.yaml
+++ b/kubernetes/apps/default/wikijs/app/externalSecret.yaml
@@ -14,10 +14,10 @@ spec:
       engineVersion: v2
       data:
         DB_TYPE: postgres
-        DB_HOST: wikijs-db-rw
+        DB_HOST: pooler-main-rw.databases
         DB_PORT: "5432"
         DB_PASS: "{{ .appPassword }}" 
-        DB_NAME: "{{ .appDB }}"
+        DB_NAME: wikijs
         DB_USER: "{{ .appUser }}"
   dataFrom:
     - extract:
