--- a/kubernetes/apps/default/paperless/app/externalSecret.yaml
+++ b/kubernetes/apps/default/paperless/app/externalSecret.yaml
@@ -22,8 +22,8 @@ spec:
         PAPERLESS_BIND_ADDR: 0.0.0.0
         PAPERLESS_PORT: "8000"
         PAPERLESS_REDIS: redis://paperless-redis:6379
-        PAPERLESS_DBHOST: paperless-db-rw
-        PAPERLESS_DBNAME: "{{ .appDB }}"
+        PAPERLESS_DBHOST: pooler-main-rw.databases
+        PAPERLESS_DBNAME: paperless
         PAPERLESS_DBUSER: "{{ .appUser }}"
         PAPERLESS_DBPASS: "{{ .appPassword }}"
         PAPERLESS_TIKA_ENABLED: "1"
