feat: Move Authentik to Main DB

--- a/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
@@ -19,8 +19,8 @@ spec:
                 error_reporting:
                     enabled: true
                 postgresql:
-                    host: authentik-db-rw
-                    name: "{{ .appDB }}"
+                    host: pooler-main-rw.databases
+                    name: authentik
                     user: "{{ .appUser }}"
                     password: "{{ .appPassword }}"
                 email:
@@ -33,10 +33,6 @@ spec:
                     timeout: 30
                     from: "{{ .emailFrom }}"
             server:
-              # ingress:
-              #     ingressClassName: ingress-nginx
-              #     enabled: true
-              #     hosts: ["{{ .hostname }}"]
               route:
                 main:
                   enabled: true
