feat: Update immich to vector DB. by bye redis you wont be missed

--- a/kubernetes/apps/default/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/default/immich/app/externalsecret.yaml
@@ -13,9 +13,9 @@ spec:
     template:
       engineVersion: v2
       data:
-        DB_HOSTNAME: immich-db-rw
+        DB_HOSTNAME: pooler-vector-rw.databases
         DB_USERNAME: "{{ .appUser }}"
-        DB_DATABASE_NAME: "{{ .appDB }}"
+        DB_DATABASE_NAME: immich
         DB_PASSWORD: "{{ .appPassword }}"
   dataFrom:
     - extract:
