fix: Uhh enable Valkey.. duhh

--- a/kubernetes/apps/default/immich/app/helm/values.yaml
+++ b/kubernetes/apps/default/immich/app/helm/values.yaml
@@ -60,7 +60,7 @@ server:
       gpu.intel.com/i915: 1000m
       memory: 8Gi
 valkey:
-  enabled: false
+  enabled: true
   persistence:
     data:
       enabled: true
