--- a/kubernetes/apps/default/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/default/immich/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        DB_HOSTNAME: vector-db-rw.databases
+        DB_HOSTNAME: vector-db-rw.databases.svc.cluster.local
         DB_USERNAME: "{{ .appUser }}"
         DB_DATABASE_NAME: immich
         DB_PASSWORD: "{{ .appPassword }}"
