--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -14,4 +14,4 @@ resources:
   - ./cloudflare-tunnel/ks.yaml
   - ./envoy-gateway/ks.yaml
   - ./unifi-dns/ks.yaml
-  - ./lancache/ks.yaml
+  # - ./lancache/ks.yaml
