--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -26,17 +26,17 @@ spec:
             image:
               repository: ghcr.io/jellyfin/jellyfin
               tag: 10.10.7@sha256:e4d1dc5374344446a3a78e43dd211247f22afba84ea2e5a13cbe1a94e1ff2141
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  tcpSocket:
-                    port: &port 8096
-                  failureThreshold: 6
-                  periodSeconds: 10
-              readiness: *probes
-              startup: *probes
+            # probes:
+            #   liveness: &probes
+            #     enabled: true
+            #     custom: true
+            #     spec:
+            #       tcpSocket:
+            #         port: &port 8096
+            #       failureThreshold: 6
+            #       periodSeconds: 10
+            #   readiness: *probes
+            #   startup: *probes
             resources:
               limits:
                 memory: 16Gi
