--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -55,7 +55,7 @@ spec:
       app:
         ports:
           http:
-            port: *port
+            port: 8096 #*port
     route:
       app:
         hostnames:
