chore: Move jelyfin metadata to its own PVC

--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -79,6 +79,10 @@ spec:
         path: /mnt/BigPool/Media
         globalMounts:
           - path: /media
+      # metadata:
+      #   existingClaim: jellyfin-metadata
+      #   globalMounts:
+      #     - path: /config/metadata
       tmpfs:
         type: emptyDir
         globalMounts:
