--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app jellyfin
+  name: jellyfin
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
+    name: jellyfin
   install:
     remediation:
       retries: -1
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      *app :
+      jellyfin:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -41,7 +41,7 @@ spec:
               claims:
                 - name: gpu
               limits:
-                memory: 16Gi
+                memory: 8Gi
         pod:
           affinity:
             nodeAffinity:
