chore: Ok lets stop fighting and just start over

--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -58,12 +58,12 @@ spec:
       resourceClaims:
         - name: gpu
           resourceClaimTemplateName: jellyfin
-      # securityContext:
-      #   runAsNonRoot: true
-      #   runAsUser: 1000
-      #   runAsGroup: 1000
-      #   fsGroup: 1000
-      #   fsGroupChangePolicy: OnRootMismatch
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
     service:
       app:
         ports:
@@ -88,8 +88,6 @@ spec:
         path: /mnt/BigPool/Media
         globalMounts:
           - path: /media
-      metadata:
-        existingClaim: "{{ .Release.Name }}-metadata"
       tmpfs:
         type: emptyDir
         globalMounts:
