chore: Remove more Garage stuff

--- a/kubernetes/apps/databases/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/app/externalsecret.yaml
@@ -31,14 +31,14 @@ spec:
       remoteRef:
         key: minio
         property: secretAccessKey
-    - secretKey: garage-access-key-id
-      remoteRef:
-        key: Garage
-        property: cnpgAccessID
-    - secretKey: garage-secret-access-key
-      remoteRef:
-        key: Garage
-        property: cnpgSecretKey
+    # - secretKey: garage-access-key-id
+    #   remoteRef:
+    #     key: Garage
+    #     property: cnpgAccessID
+    # - secretKey: garage-secret-access-key
+    #   remoteRef:
+    #     key: Garage
+    #     property: cnpgSecretKey
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
