--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/cluster.yaml
@@ -31,7 +31,7 @@ spec:
   ## Recovery End
   enablePDB: false
   enableSuperuserAccess: true
-  imageName: ghcr.io/cloudnative-pg/postgresql:17.5@sha256:2ec17b4c713d5293cb869f8d7b8aca2a9096ad6a775a77b14c35434e598ac210
+  imageName: ghcr.io/cloudnative-pg/postgresql:17.6-minimal-trixie@sha256:c64a7a93d8b24e5ebface0f32645d2944a2b6c354b4fcc2a17bbecfeee8cb393
   instances: 3
   monitoring:
     enablePodMonitor: true
