--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -10,13 +10,14 @@ vars:
   CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes/{{.CLUSTER}}'
 
 env:
-  KUBECONFIG: '{{.ROOT_DIR}}/kubeconfig'
+  # KUBECONFIG: '$HOME/.kube/config'
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
   SOPS_AGE_KEY_FILE: '{{.ROOT_DIR}}/age.key'
   TALOSCONFIG: '{{.ROOT_DIR}}/talosconfig'
 
 includes:
   bootstrap: .taskfiles/bootstrap
+  cnpg: .taskfiles/cnpg
   kubernetes: .taskfiles/kubernetes
   talos: .taskfiles/talos
   volsync: .taskfiles/volsync
