chore: Dont deploy CS2 again

--- a/kubernetes/apps/games/kustomization.yaml
+++ b/kubernetes/apps/games/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   # - ./samba/ks.yaml
   #- ./astroneer/ks.yaml
   # - ./sevendaystodie/ks.yaml
-  - ./cs2/ks.yaml
+  # - ./cs2/ks.yaml
   - ./satisfactory/ks.yaml
