--- a/kubernetes/apps/rook-ceph/kustomization.yaml
+++ b/kubernetes/apps/rook-ceph/kustomization.yaml
@@ -9,5 +9,4 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./rook-operator/ks.yaml
-  - ./rook-cluster/ks.yaml
+  - ./rook-ceph/ks.yaml
