--- a/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./clusterissuer.yaml
   - ./helmrelease.yaml
   - ./prometheusrule.yaml
-  - ./ocirespository.yaml
+  - ./ocirepository.yaml
