im so done with this shit

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/externalsecret.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/externalsecret.yaml
@@ -59,10 +59,10 @@ spec:
       data:
         aws-access-key-id: "{{ .accessKeyId }}"
         aws-secret-access-key: "{{ .secretAccessKey }}"
-        # garage-key-id: "{{ .KeyID }}"
-        # garage-secret-key: "{{ .SecretKey }}"
+        garage-key-id: "{{ .KeyID }}"
+        garage-secret-key: "{{ .SecretKey }}"
   dataFrom:
     - extract:
         key: minio
-    # - extract:
-    #     key: garage
+    - extract:
+        key: garage
