--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/cluster.yaml
@@ -5,8 +5,8 @@ kind: Cluster
 metadata:
   name: main-db
   ## Uncomment for recovery
-  # annotations:
-  #   cnpg.io/skipEmptyWalArchiveCheck: 'enabled'
+  annotations:
+    cnpg.io/skipEmptyWalArchiveCheck: 'enabled'
   ## Recovery End
 spec:
   ## Uncomment for first deployment
