--- a/kubernetes/apps/home/kustomization.yaml
+++ b/kubernetes/apps/home/kustomization.yaml
@@ -11,10 +11,10 @@ resources:
   - ./homeassistant/ks.yaml
   - ./mosquitto/ks.yaml
   - ./node-red/ks.yaml
-  - ./openwakeword/ks.yaml
-  - ./piper/ks.yaml
+  # - ./openwakeword/ks.yaml
+  # - ./piper/ks.yaml
   - ./rtlamr2mqtt/ks.yaml
   - ./tasmoadmin/ks.yaml
-  - ./whisper/ks.yaml
+  # - ./whisper/ks.yaml
   - ./zigbee2mqtt/ks.yaml
   - ./zwave-js-ui/ks.yaml
