--- a/kubernetes/apps/kube-system/multus/networks/internal.yaml
+++ b/kubernetes/apps/kube-system/multus/networks/internal.yaml
@@ -7,16 +7,16 @@ spec:
   config: |-
     {
       "cniVersion": "0.3.1",
-      "name": "net",
+      "name": "internal",
       "plugins": [
         {
           "type": "macvlan",
-          "master": "bond0.1001",
+          "master": "bond0",
           "mode": "bridge",
           "ipam": {
             "type": "static",
             "routes": [
-              { "dst": "0.0.0.0/0", "gw": "172.16.1.1" }
+              { "dst": "0.0.0.0/0", "gw": "10.1.10.1" }
             ]
           }
         },
